--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 			
 			</div>
 		</div>
+		
+		<div id = "ziyaras">
+			<h1 class = "title">Ziyaras</h1>
+			<div id = "ziyaraNames">
+			
+			</div>
+		</div>
 	</div>
 	
 	<div id="duaPage" style = "display: none;">
@@ -28,21 +35,23 @@
 	</div>
 	<script>
 		var start = true;
-		var myObj;
+		var duaObj;
+		var ziyaraObj;
 		var arabic;
 		var english;
 		var index = 0;
 		var startPage = document.getElementById("startPage");
 		var duaPage = document.getElementById("duaPage");
 		var duaNamesElement = document.getElementById("duaNames");
+		var ziyaraNamesElement = document.getElementById("ziyaraNames");
 		var xmlhttp = new XMLHttpRequest();
 		xmlhttp.onreadystatechange = function() {
 		  if (this.readyState == 4 && this.status == 200) {
-			myObj = JSON.parse(this.responseText);
-			for(var i=0; i<myObj.length; i++){
+			duaObj = JSON.parse(this.responseText);
+			for(var i=0; i<duaObj.length; i++){
 				var newName=document.createElement("div");
 				newName.classList.add("duaName");
-				newName.innerHTML=myObj[i].title;
+				newName.innerHTML=duaObj[i].title;
 				newName.setAttribute("value", i);
 				
 				duaNamesElement.appendChild(newName);
@@ -51,16 +60,50 @@
 		};
 		xmlhttp.open("GET", "duas.json", true);
 		xmlhttp.send();
+		
+		
+		var xmlhttp1 = new XMLHttpRequest();
+		xmlhttp1.onreadystatechange = function() {
+		  if (this.readyState == 4 && this.status == 200) {
+			ziyaraObj = JSON.parse(this.responseText);
+			for(var i=0; i<ziyaraObj.length; i++){
+				var newName=document.createElement("div");
+				newName.classList.add("ziyaraName");
+				newName.innerHTML=ziyaraObj[i].title;
+				newName.setAttribute("value", i);
+				
+				ziyaraNamesElement.appendChild(newName);
+			}
+		  }
+		};
+		xmlhttp1.open("GET", "ziyarat.json", true);
+		xmlhttp1.send();
+		
+		
 		window.onclick = e => {
 			if(e.target.classList[0]=="duaName"){
 				goToDua(e.target.getAttribute("value"));
+			}
+			if(e.target.classList[0]=="ziyaraName"){
+				goToZiyara(e.target.getAttribute("value"));
 			}
 		} 
 		function goToDua(i){
 			startPage.setAttribute("style", "display:none;");
 			duaPage.setAttribute("style", "");
-			arabic=myObj[i].arabic.split("\n");
-			english=myObj[i].english.split("\n");
+			arabic=duaObj[i].arabic.split("\n");
+			english=duaObj[i].english.split("\n");
+			document.getElementById("arabic").innerHTML = arabic[0];
+			document.getElementById("english").innerHTML = english[0];
+			start = false;
+			document.addEventListener('keypress', nextOrBack);
+		}
+		
+		function goToZiyara(i){
+			startPage.setAttribute("style", "display:none;");
+			duaPage.setAttribute("style", "");
+			arabic=ziyaraObj[i].arabic.split("\n");
+			english=ziyaraObj[i].english.split("\n");
 			document.getElementById("arabic").innerHTML = arabic[0];
 			document.getElementById("english").innerHTML = english[0];
 			start = false;
