--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
 			document.getElementById("arabic").innerHTML = arabic[0];
 			document.getElementById("english").innerHTML = english[0];
 			start = false;
-			document.addEventListener('keypress', nextOrBack);
+			document.addEventListener('keydown', nextOrBack);
 		}
 		
 
 		function nextOrBack(e) {
-			if(e.code=="KeyD"){
+			/*if(e.code=="KeyD"||e.code == "ArrowRight"){
 				index++;
 				if(index<arabic.length){
 					document.getElementById("arabic").innerHTML = arabic[index];
@@ -121,7 +121,7 @@
 					index--;
 				}
 			}
-			if(e.code=="KeyA"){
+			if(e.code=="KeyA"||e.code == "ArrowLeft"){
 				index--;
 				if(index>=0){
 					document.getElementById("arabic").innerHTML = arabic[index];
@@ -129,6 +129,29 @@
 				}else{
 					index++;
 				}
+			}*/
+			
+			switch(e.code){
+				case "KeyD":
+				case "ArrowRight":
+					index++;
+					if(index<arabic.length){
+						document.getElementById("arabic").innerHTML = arabic[index];
+						document.getElementById("english").innerHTML = english[index];
+					}else{
+						index--;
+					}
+					break;
+				case "KeyA":
+				case "ArrowLeft":
+					index--;
+					if(index>=0){
+						document.getElementById("arabic").innerHTML = arabic[index];
+						document.getElementById("english").innerHTML = english[index];
+					}else{
+						index++;
+					}
+					break;
 			}
 		}
 	
