--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<div id = "slideshowSettings" style="float: left;width:50%;">
 					<h1 class = "enabled" id = "slide">Slideshow</h1>
 					<div class = "row">
-						<h2>Transition Speed:</h2>
+						<h2>Speed:</h2>
 						<input class = "right" id = "tSpeed" type = "text" value = "1"></input>
 					</div>
 					<br>
@@ -49,9 +49,8 @@
 						<h2>Bottom</h2>
 						<input class = "right" id = "arBot" type = "text" value = "#009494"></input>
 					</div>
-					<br>
 					<div class = "row">
-						<h2>Arabic Text Color</h2>
+						<h2>Text</h2>
 						<input class = "right" id = "arText" type = "text" value = "#FFFFFF"></input>
 					</div>
 					<br>
@@ -64,36 +63,25 @@
 						<h2>Bottom</h2>
 						<input class = "right" id = "enBot" type = "text" value = "#439775"></input>
 					</div>
-					<br>
 					<div class = "row">
-						<h2>English Text Color</h2>
+						<h2>Text</h2>
 						<input class = "right" id = "enText" type = "text" value = "#FFFFFF"></input>
 					</div>
 					<br>
 					<div class = "row">
-						<h2>English Font Size (vw)</h2>
+						<h2>Eng Size(vw/px)</h2>
 						<input class = "right" id = "enFont" type = "text" value = "2vw"></input>
 					</div>
 					<div class = "row">
-						<h2>Arabic Font Size (vw)</h2>
+						<h2>Ar Size(vw/px)</h2>
 						<input class = "right" id = "arFont" type = "text" value = "3vw"></input>
 					</div>
 				</div>
 				<div id = "overlaySettings" style="float: right;width: 50%;margin-left: 3%;">
 					<h1 class = "disabled" id = "overlay">Overlay</h1>
 					<div class = "row">
-						<h2>Transition Speed:</h2>
+						<h2>Speed:</h2>
 						<input class = "right" id = "tSpeedO" type = "text" value = "1"></input>
-					</div>
-					<br>
-					<h2>Size (in pixels):</h2>
-					<div class = "row">
-						<h2>Width:</h2>
-						<input class = "right" id = "width" type = "text" value = "1920"></input>
-					</div>
-					<div class = "row">
-						<h2>Height</h2>
-						<input class = "right" id = "height" type = "text" value = "200"></input>
 					</div>
 					<br>
 					<h2>Arabic Color Options (Hex):</h2>
@@ -105,9 +93,8 @@
 						<h2>Bottom</h2>
 						<input class = "right" id = "arBotO" type = "text" value = "#009494"></input>
 					</div>
-					<br>
 					<div class = "row">
-						<h2>Arabic Text Color</h2>
+						<h2>Text</h2>
 						<input class = "right" id = "arTextO" type = "text" value = "#FFFFFF"></input>
 					</div>
 					<br>
@@ -120,20 +107,30 @@
 						<h2>Bottom</h2>
 						<input class = "right" id = "enBotO" type = "text" value = "#439775"></input>
 					</div>
-					<br>
 					<div class = "row">
-						<h2>English Text Color</h2>
+						<h2>Text</h2>
 						<input class = "right" id = "enTextO" type = "text" value = "#FFFFFF"></input>
 					</div>
 					<br>
 					<div class = "row">
-						<h2>English Font Size (vw/px)</h2>
+						<h2>Eng Size(vw/px)</h2>
 						<input class = "right" id = "enFontO" type = "text" value = "1.5vw"></input>
 					</div>
 					<div class = "row">
-						<h2>Arabic Font Size (vw/px)</h2>
+						<h2>Ar Size(vw/px)</h2>
 						<input class = "right" id = "arFontO" type = "text" value = "2.5vw"></input>
 					</div>
+					<br>
+					<h2>Size (in pixels):</h2>
+					<div class = "row">
+						<h2>Width:</h2>
+						<input class = "right" id = "width" type = "text" value = "1920"></input>
+					</div>
+					<div class = "row">
+						<h2>Height</h2>
+						<input class = "right" id = "height" type = "text" value = "200"></input>
+					</div>
+					<br>
 				</div>
 			</div>
 		</div>
