--- a/overlay.html
+++ b/overlay.html
@@ -2,7 +2,8 @@
 <html style="height: 100%;">
 
 <head>
-<link rel="stylesheet" href="styleoverlay.css">
+	<title>Overlay</title>
+	<link rel="stylesheet" href="styleoverlay.css">
 </head>
 
 <body>
